--- a/css/style.css
+++ b/css/style.css
@@ -1,13 +1,16 @@
 li {
 	display: inline-block;
-	margin-left: 0px;
+	margin-top: 10px;
 	min-width: 30px;
 	border: 1px solid black;
 	border-radius: 3px; 
 	text-align: center;
 	background: #C7CBD1;
-	
+}
 
+ul {
+	background: #F2F2F2;
+	height: 50px;
 }
 
 .first {
