--- a/css/style.css
+++ b/css/style.css
@@ -13,8 +13,16 @@ ul {
 	height: 50px;
 }
 
+.page-name {
+	margin-left: 10%;
+	font-size: 10px;
+	border: none;
+	background: #F2F2F2;
+	margin-top: 0px;
+}
+
 .first {
-	margin-left: 50%;
+	margin-left: 40%;
 	background: #EBEDEF;
 }
 
@@ -27,4 +35,10 @@ a {
 a:hover {
 	color: #FF9800;
 	border-bottom: 1px dashed #FF9800;
+}
+
+.content {
+	background: #DADADA;
+	width: 50%;
+	margin-left: 10%;
 }
