--- a/css/style.css
+++ b/css/style.css
@@ -42,3 +42,18 @@ a:hover {
 	width: 50%;
 	margin-left: 10%;
 }
+
+body {
+	background: #DADADA;
+}
+
+.hellowen {
+	width: 40%;
+	height: 40%;
+	float: right;
+	margin: 20px;
+}
+
+.fat {
+	font-weight: bold;
+}
