--- a/css/style.css
+++ b/css/style.css
@@ -1,92 +1,59 @@
-html,
-body {
-    margin: 0;
-    padding: 0;
+li {
+	display: inline-block;
+	margin-top: 10px;
+	min-width: 30px;
+	border: 1px solid black;
+	border-radius: 3px; 
+	text-align: center;
+	background: #C7CBD1;
+}
+
+ul {
+	background: #F2F2F2;
+	height: 50px;
+}
+
+.page-name {
+	margin-left: 10%;
+	font-size: 10px;
+	border: none;
+	background: #F2F2F2;
+	margin-top: 0px;
+}
+
+.first {
+	margin-left: 40%;
+	background: #EBEDEF;
+}
+
+a {
+	text-decoration: none;
+	color: black;
+	padding: 5px;
+}
+
+a:hover {
+	color: #FF9800;
+	border-bottom: 1px dashed #FF9800;
+}
+
+.content {
+	background: #DADADA;
+	width: 50%;
+	margin-left: 10%;
 }
 
 body {
-    width: 450px;
-    height: 335px;
-    font-family: "Arial", sans-serif;
-    font-size: 10px;
-    color: white;
+	background: #DADADA;
 }
 
-.layout-position {
-    margin-left: 50px;
-    margin-right: 50px;
-    
+.hellowen {
+	width: 40%;
+	height: 40%;
+	float: right;
+	margin: 20px;
 }
 
-
-
-
-
-.layout-position:after {
-    content: "";
-    display: table;
-    clear: both;
-}
-
-.header-top {
-    background: #c0392b;
-    padding: 5px;
-    height: 25px;
-    margin-bottom: 10px;
-    
-    
-}
-
-.header-menu {
-    background: #3498DB;
-    padding-top: 5px;
-    padding-left: 55px;
-    height: 30px
-}
-
-.promo {
-    width: 160px;
-    min-height: 50px;
-    background: #c0392b;
-    float: left;
-    margin-left: 50px;
-    margin-top: 10px;
-    margin-bottom: 10px;
-    padding: 5px
-}
-
-.promo1 {
-}
-
-.promo2 {
-    margin-left: 10px;
-}
-
-.header {
-    background: #34495e;
-    padding-top: 10px;
-}
-
-.colloum {
-    background: #3498DB;
-    float: left;
-    margin-right: 10px;
-    padding: 5px;
-    height: 100px;
-    width: 60px;
-}
-
-.colloum-right {
-    margin-right: 0px;    
-}
-
-.colloum-main {
-    width: 180px
-}
-
-.footer {
-    background: #34495e;
-    padding: 5px 55px;
-    margin-top: 10px;
-    padding-bottom: 20px;
+.fat {
+	font-weight: bold;
 }
